--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "Telegram One 4u Bot",
-  "description": "[One4uBot] A modular Telegram userbot running on Python 3.8+ with an sqlalchemy database.",
+  "name": "Telegram Sentury Ubot ",
+  "description": "[SenturyUbot] A modular Telegram userbot running on Python 3.8+ with an sqlalchemy database.",
   "logo": "https://i.ibb.co/CzXcJ0S/photo-2020-01-28-23-32-03.jpg",
   "keywords": [
     "telegram",
@@ -9,9 +9,9 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/MoveAngel/One4uBot",
+  "repository": "https://github.com/jefa2231/SenturyUbot",
   "website": "https://telegra.ph/How-to-host-a-Telegram-Userbot-11-02",
-  "success_url": "https://t.me/userbotindo",
+  "success_url": "https://t.me/senturybotg",
   "stack": "container",
   "env": {
     "API_KEY": {
@@ -161,7 +161,7 @@
     },
     "DEFAULT_BIO": {
       "description": "Default profile bio.",
-      "value": "[PM = Report Spam] I ❤ ️One4uBot",
+      "value": "[PM = Report Spam] I ❤ ️SenturyUbot",
       "required": false
     },
     "ALIVE_NAME": {
@@ -193,8 +193,4 @@
     {
       "plan": "heroku-postgresql",
       "options": {
-        "version": "12"
-      }
-    }
-  ]
-}
+        "version": "12
